--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     <main class="main"><!--TITLE-->
         <h1 class="title">WELCOME TO OPTIMO STONE</h1>
-        
+        <h2>Discover the world of Stone.</h2>
         <p>Optimo stone, have the best stone crafting team for your project, we are happy for your visit on our web site, take a look and send us a message in any moment to help you! Also yo can Register to recive information of promos and discounts on your mail </p>
     </main>
         <section id="products">
